<resources>
    <string name="app_name">MiscDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sensori">Dimostrazione Sensori</string>
    <string name="temperatura">Temperatura</string>
    <string name="segnaposto">Abcd</string>
    <string name="presente">presente</string>
    <string name="non_presente">non presente</string>
    <string name="temp_format">%04.1f</string>
    <string name="giroscopio">Giroscopio</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="settings">Impostazioni</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="username">Username</string>
    <string name="autologin">Accesso automatico</string>
    <string name="hintUsername">nome utente</string>
    <string name="valUsernameObbligatorio">Lo username è obbligatorio</string>
    <string name="sensors">Sensori</string>
    <string name="mappa">Mappa</string>
    <string name="camera">Camera</string>
    <string name="scatta">Acquisisci</string>
</resources>
