<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".SensoriFragment">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" android:text="@string/sensori"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"/>
    <TextView
            android:text="@string/temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textTemperatura"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2" android:text="@string/segnaposto"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="150dp"
                                          android:orientation="vertical"/>
    <TextView
            android:text="@string/giroscopio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGiroscopio" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView4"/>
    <TextView
            android:text="@string/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGiroX" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView6"/>
    <TextView
            android:text="@string/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGiroY" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView8"/>
    <TextView
            android:text="@string/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGiroZ" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView10"/>
</android.support.constraint.ConstraintLayout>