<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".ImpostazioniFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impostazioni" android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView7"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editUsername"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:hint="@string/hintUsername"/>
    <CheckBox
            android:text="@string/autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkAutoLogin" app:layout_constraintStart_toStartOf="@+id/editUsername"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/editUsername"/>
    <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAnnulla"
            app:layout_constraintTop_toBottomOf="@+id/chkAutoLogin" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnConferma"
            android:layout_marginTop="48dp"/>
    <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConferma" app:layout_constraintStart_toEndOf="@+id/btnAnnulla"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btnAnnulla"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="124dp"
                                          android:orientation="vertical"/>

</android.support.constraint.ConstraintLayout>